2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyname_r): Implemented a similar
	workaround to the one I did for a gethostbyaddr_r() glibc bug
	here. Glibc will apparently return success for addresses such as
	"192..168.1.1" (note the double dot) and yet not have filled in
	the hostent properly.

2004-04-12  Jeffrey Stedfast  <fejj@ximian.com>

	Really fixes bug #56623

	* e-signature-list.c (gconf_signatures_changed): If we've had to
	"fix" any signatures by adding a uid, set the resave state on the
	list (only cared about if this is at initial load time).
	(e_signature_list_construct): If we've set any uids in
	signatures_changed(), then save the signature list back out.

2004-04-09  Jeffrey Stedfast  <fejj@ximian.com>

	* e-account.c (xml_set_identity): If we fail to set a sig_uid then
	try to extract the old style signature id and assume the migration
	code will fix us up (if not, nothing bad will happen anyway).

	* e-signature-list.c (gconf_signatures_changed): If the autogen
	signature isn't in the list (or isn't the first in the list), add
	it to the head of the list.

2004-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	Probably fixes bug #56623 and others?

	* e-signature-list.c (gconf_signatures_changed): Fixed to not use
	free'd iter memory. Also reverse the new_sigs list before adding
	them to the signature list (so they are in the same order they
	appeared in the gconf key).

2004-04-05  Jeffrey Stedfast  <fejj@ximian.com>

	* e-signature-list.c (gconf_signatures_changed): Fixed to not
	ignore signatures without uids (e.g. signatures that were from
	prior versions).

2004-04-02  Jeffrey Stedfast  <fejj@ximian.com>

	* e-signature.c (e_signature_to_xml): Always set a format prop so
	that 1.4 and older 1.5 versions won't strcmp() on a NULL value.

2004-04-01  Jeffrey Stedfast  <fejj@ximian.com>

	* e-account.c: Reference signatures by their UID rather than by an