@@ -1,5 +1,10 @@
 2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* e-signature-list.c (gconf_signatures_changed): Don't add an
+	autogen signature if the new signature is the autogen signature.
+
+2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>
+
 	* e-host-utils.c (e_gethostbyname_r): Implemented a similar
 	workaround to the one I did for a gethostbyaddr_r() glibc bug
 	here. Glibc will apparently return success for addresses such as
